# torque-tracker-engine

./: .gitignore  BufferSizeDifferences.numbers  Cargo.toml  README.md
Documentation/: TempoResearch.numbers  effects.txt
examples/: live_note.rs  pattern_playback.rs  render.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: full_load.rs  header.rs  pattern.rs  sample.rs
simple-left-right/: Cargo.toml  README.md
simple-left-right/src/: inner.rs  lib.rs  reader.rs  shared.rs  writer.rs
simple-left-right/tests/: tests.rs  utilities.rs
src/: lib.rs  live_audio.rs  manager.rs  playback.rs  sample.rs
src/audio_processing/: mod.rs  playback.rs  sample.rs
src/file/: err.rs  file_handling.rs  mod.rs
src/file/impulse_format/: docs.txt  header.rs  instrument.rs  mod.rs  pattern.rs  sample.rs
src/file_formats/: file_handling.rs  mod.rs
src/file_formats/impulse_format/: header.rs  instrument.rs  pattern.rs  sample.rs
src/manager/: audio_manager.rs
src/playback/: audio_manager.rs  audio_worker.rs  channel.rs  constants.rs  event.rs  event_command.rs  mod.rs  pattern.rs  sample.rs
src/playback/communication/: manager_event.rs  mod.rs
src/project/: mod.rs  pattern.rs  song.rs
src/song/: event_command.rs  mod.rs  note_event.rs  pattern.rs  song.rs
test-files/: 770_Hz_Tone.wav.license  test-1.it
tracker-engine/: Cargo.toml
tracker-engine/examples/: live_note.rs  pattern_playback.rs  render.rs
tracker-engine/src/: channel.rs  lib.rs  live_audio.rs  manager.rs  playback.rs  sample.rs
tracker-engine/src/audio_processing/: mod.rs  playback.rs  sample.rs
tracker-engine/src/file/: mod.rs
tracker-engine/src/file/impulse_format/: header.rs  instrument.rs  mod.rs  pattern.rs  sample.rs
tracker-engine/src/manager/: audio_manager.rs
tracker-engine/src/project/: event_command.rs  mod.rs  note_event.rs  song.rs
tracker-engine/src/song/: event_command.rs  note_event.rs  pattern.rs  song.rs
