[package]
name = "tracker-engine"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Baumann <dev@lucasbaumann.de>"]
rust-version = "1.82"
license = "MPL-2.0"
description = "Rewrite of Schismtracker"
readme = "README.md"
keywords = ["audio"]
categories = ["audio"]

[features]
default = ["cpal"]
cpal = ["dep:cpal"]

[dependencies]
cpal = { version = "0.16.0", optional = true }
dasp = { version = "0.11.0", default-features = false, features = ["std"] }
rtrb = "0.3.1"
rtsan-standalone = "0.2.0"
simple-left-right = "0.2.1"
triple_buffer = "8.0.0"
# assert_no_alloc

[dev-dependencies]
hound = "3.5.1"

[lints.clippy]
elided_lifetimes_in_paths = "warn"
