[package]
name = "torque-tracker-engine"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Baumann"]
rust-version = "1.87"
license = "MPL-2.0"
description = "Audio Backend for Torque Tracker, an old school music tracker"
keywords = ["audio"]
categories = ["audio"]
repository = "https://tangled.sh/did:plc:54jgbo4psy24qu2bk4njtpc4/torque-tracker-engine"

[dependencies]
dasp = { version = "0.11.0", default-features = false, features = ["std"] }
rtrb = "0.3.1"
rtsan-standalone = "0.2.0"
simple-left-right = "0.2.1"
triple_buffer = "8.0.0"
# assert_no_alloc

[dev-dependencies]
hound = "3.5.1"
cpal = "0.16.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
