[package]
name = "simple-left-right"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
readme = "README.md"
authors = ["Lucas Baumann"]
keywords = ["real-time", "lock-free", "data-structures", "read-write", "concurrency", "no-std"]
categories = ["concurrency"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/luca3s/tracker-engine"
description = "Lockfree, realtime safe and copy-free Synchronisation"
# workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# enable thread sleeping in spin-locks
std = ["crossbeam-utils/std"]
# enable async sleeping and yielding in spin-locks
# uses the smol ecosystem. Should be compatible with every runtime
async = ["std", "dep:async-io", "dep:futures-lite"]

[dependencies]
# only for backoff spinlocks.
crossbeam-utils = { version = "0.8.20", default-features = false }
# async sleeping
async-io = { version = "2.3.4", optional = true }
# async yielding
futures-lite = {version = "2.3.0", optional = true, default-features = false }
