[package]
name = "simple-left-right"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
readme = "README.md"
authors = ["Lucas Baumann"]
keywords = ["real-time", "lock-free", "read-write", "concurrency", "no-std"]
categories = ["concurrency"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/luca3s/tracker-engine"
description = "Lockfree, realtime safe and copy-free Synchronisation"
# workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
