[package]
name = "impulse-engine"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Baumann"]
rust-version = "1.82"
license = "GPL-2.0" # take a look again
description = "Rewrite of Schismtracker"
repository = "https://github.com/luca3s/tracker-engine"
readme = "README.md"
keywords = ["audio"]
categories = ["audio"]

[features]
async = ["dep:async-io", "dep:futures-lite", "dep:async-channel", "simple-left-right/async"]

[dependencies]
async-io = { version = "2.3.4", optional = true }
futures-lite = { version = "2.3.0", optional = true, default-features = false }
async-channel = { version = "2.3.1", optional = true }
# added a couple features to it. pull requests don' really progress
basedrop = "0.1.2" # miri reports Race Condition. Wait for fix or pull inside
cpal = "0.15.3"
crossbeam-utils = "0.8.20"
rtrb = "0.3.1"
simple-left-right = { path = "../simple-left-right", features = ["std"] }
# assert_no_alloc

[dev-dependencies]
hound = "3.5.1"

[lints.clippy]
elided_lifetimes_in_paths = "warn"
