[package]
name = "impulse-engine"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Baumann"]
rust-version = "1.82"
license = "GPL-2.0" # take a look again
description = "Rewrite of Schismtracker"
repository = "https://github.com/luca3s/tracker-engine"
readme = "README.md"
keywords = ["audio"]
categories = ["audio"]

[dependencies]
# added a couple features to it. pull requests don' really progress
basedrop = "0.1.2" # miri reports Race Condition. Wait for fix or pull inside
cpal = "0.15.3"
rtrb = "0.3.1"
simple-left-right = { path = "../simple-left-right" }
triple_buffer = "8.0.0"
# assert_no_alloc

[dev-dependencies]
hound = "3.5.1"

[lints.clippy]
elided_lifetimes_in_paths = "warn"
